# product-ops-jota

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.bot  README.md  ROTEIRO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  loop.yml
apps/: copiloto.py  demo.py  demo_lab.html  demo_play.html  demo_ui.html  telegram_bot.py  web_demo.py  whatsapp_bot.py
data/: aprendizado.json  banco_frases.json  casos_reais.jsonl  conversas_ruins.json  eval_scorecard.json  jota_support.db  lab_atendimento.json  lab_casos.jsonl  promocao.json  recalibracao.json  sim_conversations.json  sim_llm_customers.json  soak_report.md  soak_results.jsonl
data/knowledge_base/: jota_kb.json
docs/: DEPLOY.md  FUNDACAO.md  VALIDACAO_SUPORTE.md  WHATSAPP_DEMO.md
evals/: decision_golden.json  retrieval_golden.json  run_all.py  run_classifier_eval.py  run_decision_eval.py  run_outcome_eval.py  run_rag_eval.py  simulate_conversations.py  simulate_llm_customers.py  simulate_proactive.py  soak.py
scripts/: build_db.py  demo.sh  gerar_banco_frases.py  lab_atendimento.py  loop_continuo.py  metricas_interceptacao.py  observability.py  painel.py  painel_queries.py  promover_clusters.py  recalibrar_policy.py  resolver_conversas_ruins.py  traces_para_casos.py
src/product_ops_jota/: channels.py  classifier.py  decision.py  friction_model.py  generate_support_data.py  handoff.py  incident.py  outcome.py  rag.py  support_db.py  trace.py
tests/: test_core.py  test_fuzz.py
