[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "product-ops-jota"
version = "0.1.0"
description = "Atendimento proativo do Jota — modelo de problemas, score de priorização e laboratório de atendimento"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "eval_type_backport; python_version < '3.10'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
